--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kerli matka-app",
+  "name": "matkaapp",
   "version": "0.3.0",
   "description": "A sample Node.js app using Express 4",
   "engines": {
